--- a/awesome-buttons.sass
+++ b/awesome-buttons.sass
@@ -6,20 +6,18 @@
     this buttons are even more awesome, as the need only one color for all three states,
     and have an super awesome onclick state
 
-// set an awesome color for the buttons, feel free to add new colors like an .awesome.green or .awesome.secondary
-.awesome
+=awesome
+  // set an awesome color for the buttons, feel free to add new colors like an .awesome.green or .awesome.secondary
   background-color: #111 !important
   color: #fff !important
 
-// the awesome size gets set here. Feel free to add new sizes, like .awesome.small or .small.large
-.awesome
+  // the awesome size gets set here. Feel free to add new sizes, like .awesome.small or .small.large
   padding: 5px 10px 6px !important
   font-size: 13px !important
-.awesome:active
-  padding: 6px 10px 5px !important
+  &:active
+    padding: 6px 10px 5px !important
 
-// Touch the rest at your onw risk.
-.awesome
+  // Touch the rest at your onw risk.
   border: 0 !important
   cursor: pointer !important
   font-style: normal !important
@@ -63,35 +61,35 @@
   // disable text selection (Firefox only)
   -moz-user-select: none
 
+  // hide selection background color
+  &::selection
+    background: transparent
+
+  // remove dotted line, works for links only
+  outline: 0
+  &::-moz-focus-inner
+    // remove dotted lines for buttons
+    border: none
+  &:focus, &:hover
+    background-image: -moz-linear-gradient(top, rgba(255,255,255,.4), rgba(150,150,150,.3), rgba(0,0,0,.0)) !important
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255,255,255,.4)), color-stop(0.5, rgba(150,150,150,.3)), to(rgba(0,0,0,.0))) !important
+    #filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#50ffffff,endColorstr=#20000000) progid:DXImageTransform.Microsoft.Shadow(color=#000000,direction=135,strength=2)
+  &:active
+    background-image: -moz-linear-gradient(top, rgba(0,0,0,.2), rgba(150,150,150,.2), rgba(255,255,255,.2)) !important
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,.2)), color-stop(0.5, rgba(150,150,150,.2)), to(rgba(255,255,255,.2))) !important
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#20000000,endColorstr=#50ffffff) progid:DXImageTransform.Microsoft.Shadow(color=#000000,direction=315,strength=1)
+
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.7) !important
+    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.7) !important
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.7) !important
+
+//TODO: can we make the two rules below work with mixins?
+
 // OPERA only
    if there is no border set, Opera shows a transparent background-color if border-radius is set.
 @media all and (-webkit-min-device-pixel-ratio:10000),not all and (-webkit-min-device-pixel-ratio:0)
   input.awesome
     border: 1px solid RGBa(0,0,0,0) !important
-
-// hide selection background color
-.awesome::selection
-  background: transparent
-
-.awesome
-  // remove dotted line, works for links only
-  outline: 0
-.awesome::-moz-focus-inner
-  // remove dotted lines for buttons
-  border: none
-.awesome:focus,
-.awesome:hover
-  background-image: -moz-linear-gradient(top, rgba(255,255,255,.4), rgba(150,150,150,.3), rgba(0,0,0,.0)) !important
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255,255,255,.4)), color-stop(0.5, rgba(150,150,150,.3)), to(rgba(0,0,0,.0))) !important
-  #filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#50ffffff,endColorstr=#20000000) progid:DXImageTransform.Microsoft.Shadow(color=#000000,direction=135,strength=2)
-.awesome:active
-  background-image: -moz-linear-gradient(top, rgba(0,0,0,.2), rgba(150,150,150,.2), rgba(255,255,255,.2)) !important
-  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,.2)), color-stop(0.5, rgba(150,150,150,.2)), to(rgba(255,255,255,.2))) !important
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#20000000,endColorstr=#50ffffff) progid:DXImageTransform.Microsoft.Shadow(color=#000000,direction=315,strength=1)
-
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.7) !important
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.7) !important
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.7) !important
 
 // Safari doesn't support inset box shadow, so we better remove it
 @media screen and (-webkit-min-device-pixel-ratio:0)
